--- a/static/style.css
+++ b/static/style.css
@@ -158,7 +158,7 @@ body {
     overflow: hidden;
     position: relative;
     height: calc(100vh - 250px);
-    margin: 13% 5%;
+    margin: 50px 72px;
 }
 
 textarea {
